--- a/estilos.css
+++ b/estilos.css
@@ -674,16 +674,16 @@ ul {
     font-size: 0.95rem;
 }
 
-.social-links-footer a {
+.social-links-footer a i {
     display: inline-block;
-    color: rgba(255, 255, 255, 0.8);
+    color:  white;/*(255, 255, 255, 0.8); */
     margin-right: 15px;
-    font-size: 1.3rem;
+    font-size: 20px;
     transition: color 0.3s ease;
 }
 
-.social-links-footer a:hover {
-    color: var(--accent-color);
+.social-links-footer a i:hover {
+    color: blue /*var(--accent-color); */
 }
 
 .footer-links ul li {
